# font

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md
examples/: font2svg.rs  font_info.rs  parse.rs  parse_fonts.rs  render_text.rs
src/: cff.rs  eexec.rs  error.rs  gpos.rs  gsub.rs  layout.rs  lib.rs  macros.rs  opentype.rs  parsers.rs  postscript.rs  svg.rs  truetype.rs  type1.rs  type2.rs  woff.rs  woff_lut.rs
src/math/: assembly.rs  mod.rs
src/opentype/: base.rs  cmap.rs  gdef.rs  gpos.rs  gsub.rs  kern.rs  mod.rs  os2.rs  post.rs
src/opentype/math/: mod.rs
tests/: parse_fonts.rs
