[package]
name = "font"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

[features]
unstable = ["slotmap/unstable", "tuple/nightly"]
tools = ["env_logger", "pathfinder_export"]
svg = ["svg_dom"]

[dependencies]
encoding = { git = "https://github.com/pdf-rs/encoding/" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_color = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_builder = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/", optional=true }
tuple = { git = "https://github.com/s3bk/tuple/" }
nom = "5.0.0"
log = "0.4.8"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
slotmap = { version = "0.4.0" }
decorum = "0.1.3"
itertools = "0.8.0"
indexmap = "1.0"
brotli-decompressor = "2.3.0"
inflate = "0.4.5"
walkdir = "2.2.9"
env_logger = { version = "*", optional=true }
svg_dom = { git = "https://github.com/s3bk/pathfinder_svg", optional=true }

[dev-dependencies]
svg_dom = { git = "https://github.com/s3bk/pathfinder_svg" }
svg_draw = { git = "https://github.com/s3bk/pathfinder_svg" }
