[package]
name = "font"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

[features]
unstable = ["slotmap/unstable", "tuple/nightly"]
svg = ["svg_dom"]

[dependencies]
encoding = { git = "https://github.com/pdf-rs/encoding/" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
tuple = { git = "https://github.com/s3bk/tuple/" }
nom = "5.1"
log = "0.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }
slotmap = { version = "0.4" }
decorum = "0.3"
itertools = "0.9"
indexmap = "1.4"
brotli-decompressor = "2.3"
inflate = "0.4.5"
svg_dom = { git = "https://github.com/s3bk/pathfinder_svg", optional=true }

[dev-dependencies]
svg_dom = { git = "https://github.com/s3bk/pathfinder_svg" }
svg_draw = { git = "https://github.com/s3bk/pathfinder_svg" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
pathfinder_export = { git = "https://github.com/servo/pathfinder/" }
walkdir = "2.3"
env_logger = { version = "*" }
